# piwo-ceny

./: .gitignore  README.md  beer_data.py  beer_data_scraper.py  main.py  paths.json  pyproject.toml  requirements.txt  zabka_html_file.html
core/: scheduler.py
db/: base.py  crud.py
models/: beer_item.py
routers/: items.py
schemas/: item.py
scraping/: parser.py  scraper.py
services/: ingest.py
