[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piwo-ceny"
version = "1.0.0"
description = "API for getting beer data from shops websites"
readme = "README.md"
requires-python = ">=3.12"
authors=[{name = bdziurczak, email = }]

[project.urls]
Repository = "https://github.com/bdziurczak/piwo-ceny"